# EM

./: INSTALL.md  NEWS.md  README.md  TODO.md
doc/fit_2hg/: fit_2hg.tex
doc/vScatter/: vScatter.tex
misc/: Dockerfile  README
python/: README  gather.py  genInput.py  genInput_ELSXI.py  generate_scatterfit_input.py  hsPhaseCurve.py  hsPlot.py  hsShow.py  makeBatch.py  medGenGui.ui  medPreview.py  medRhoPlot.py  plotHS.py  plotHemisphere.py  previewTemplate.rib  scatterData.py  template_sc.txt  template_submit.txt  templates.py  testSig.py  test_Lambertian.py  test_radTransfer.py  test_xrSlab.py  view_med_rho.py  xrDisplay.py  xrGui.py  xrInspect.py  xrInspect_qt3.py  xrRelativeCombPlot.py  xrRelativePlot.py  xrShow.py  xrSingleDirPlot.py  xringleDirPlot.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  core.f90  external_interfaces.F90  geometry.f90  lightsource.f90  spectrum.f90  sphere.f90  util.F90
src/lib/random/: CMakeLists.txt  igdev.f90  random.F90
src/lib/rfield/: CMakeLists.txt  rfield.F90
src/lib/scatter/: CMakeLists.txt  brdf.f90
src/lib/simulation/: CMakeLists.txt  cnt_grid3d.f90  cnt_grid3d.f90_blah  gth_hemisphere.f90  gth_hemisphere_old.f90  gth_quartersphere.f90  medium.f90  sampler.f90  simulation.f90  trace.f90  trace_xr.f90
src/lib/xr/: CMakeLists.txt  bfdf.f90  fileio.f90  material.f90
src/programs/: CMakeLists.txt
src/programs/media/: CMakeLists.txt  medApplyRandomField.f90  medGen.f90  medRender.f90
src/programs/visual/: CMakeLists.txt  fit_2hg.f90  fit_hg2.f90  geomScatter.f90  hemiScatter.f90  simpleScatter.f90  vScatter.f90
src/programs/xr/: CMakeLists.txt  xrfip.f90  xrfip_m_analytical.f90  xrfip_m_firstorder.f90  xrfip_m_mcforce.f90  xrfip_m_mcpeel.f90  xrfiphs.f90  xrfipsd.f90  xrfpm.f90  xrfpm_m_analytical.f90  xrfpm_m_firstorder.f90  xrfpm_m_mcpeel.f90  xrfpmhs.f90
src/tests/: CMakeLists.txt  t_geometry.f90  test_geometry.f90  test_pTrace.f90  test_packing.f90  test_rfield.f90  test_trace.f90  test_xr.f90  testi.f90
test/: Makefile
test/fit_2hg/: README  fit_2hg_test.in
test/geomScatter/: geomScatter_test.in
test/hemiScatter/: Makefile  test_nomap.in
test/medgen/: Makefile  medium_rho_035.in  test_constant.in  test_lognormal.in  test_uniform.in
test/vScatter/: Makefile  scatter_020_H06_S006.in  test_050_con.in  test_050_uni.in  test_MonteCarlo.in  test_RadTransfer.in  test_nomap.in
test/xrfip/: compare.py  do_tests.py  hs_ln_an.in  hs_ln_fo.in  hs_ln_mf.in  hs_ln_mp.in  hs_sp_an.in  hs_sp_fo.in  hs_sp_mf.in  hs_sp_mp.in  parTemplate.txt  tb_ln_an.in  tb_ln_fo.in  tb_ln_mf.in  tb_ln_mp.in  tb_sp_an.in  tb_sp_fo.in  tb_sp_mf.in  tb_sp_mp.in
test/xrfip_em/: compare.py  tb_ln_an.in  tb_ln_fo.in  tb_sp_an.in  tb_sp_fo.in
test/xrfpm/: compare.py  tb_sp_an.in  tb_sp_fo.in
